plugins {
    id 'java'
    id 'application'
    id 'com.linecorp.thrift-gradle-plugin' version '0.6.1'
}

dependencies {
    // https://mvnrepository.com/artifact/org.apache.thrift/libthrift
    implementation 'org.apache.thrift:libthrift:0.22.0'
    // https://mvnrepository.com/artifact/jakarta.annotation/jakarta.annotation-api
    implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0'
    // https://mvnrepository.com/artifact/org.slf4j/slf4j-reload4j
    implementation 'org.slf4j:slf4j-reload4j:2.0.17'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

final String THRIFT_GENERATED_DIR = "$projectDir/generated"

compileThrift {
    sourceItems "${project(':internalcrm').projectDir}/src/main/thrift"
    outputDir "$THRIFT_GENERATED_DIR/java"
    createGenFolder false
    strict true
    verbose true
    recurse true
    generator 'java', 'private_members', 'fullcamel', 'jakarta_annotations'
}

sourceSets.main.java.srcDirs += [compileThrift.outputDir]

clean {
    delete file(THRIFT_GENERATED_DIR)
}

application {
    mainClass = 'fr.univangers.mashup.client.Client'
}
